[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.6"
log = "0.4.20"
bincode = "1.3"
rust-crypto = "^0.2"
failure = "0.1"
sled = "0.34.6"
serde = { version = "1.0", features = ["derive"] }
clap = "4.4.0"
rand = "0.8.5"
bitcoincash-addr = "0.5.2"
merkle-cbt ="0.3.2"
env_logger = "0.11.8"